welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:1: error: Missing closing brace `}' assumed here
var cpt = 0
^Diagonal:1: error: expected class or object definition
var cpt = 0
^Diagonal:2: error: expected start of definition
override def run() {
         ^Diagonal:21: error: Missing closing brace `}' assumed here
}
^